--- a/Index.html
+++ b/Index.html
@@ -28,17 +28,19 @@ Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte
     el que se desemvuelva.
   </p>
   <img src="imagen/Figma.png" alt="Logo De Figma" tittle="Logo de Figma">
-  <h3>Visual Figma</h3>
+  <h3>Figma</h3>
   <p>
     Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su
     implementación por su fácil uso porque puede ser usado directamente desde el navegador.
   </p>
   <img src="imagen/Github.png" alt="Logo De Github" tittle="Logo de Github">
-  <h3>Visual Github</h3>
+  <h3>Github</h3>
   <p>
     Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el
     mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de
     manera privada, Github será esencial para almacenar tu futuro portafolio.
 </p>
+<h2>"Este es tu comienzo como desarrollador"</h2>
+<h3>Leonardo Garcia Sanchez</h3>
 </body>
 </html>
