--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,32 @@ Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte
     manera privada, Github será esencial para almacenar tu futuro portafolio.
 </p>
 <h2>"Este es tu comienzo como desarrollador"</h2>
-<h3>Leonardo Garcia Sanchez</h3>
+<h4>Leonardo Garcia Sanchez</h4>
+<p>
+<H2>Conceptos esenciales del Desarrollo Web </H2>
+</p>
+<h3>1. HTML</h3>
+<p>Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el componente más básico de la web. Define el significado
+y la estructura del contenido.</p>
+<img src="imagen/html.png" alt="Imagen1" title="Imagen1"
+<p><h3>2. Etiquetas</h3>
+</p>
+<p>Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica al contenido de nuestro website y cada una tiene
+características y usos diferentes aunque visualmente den un resultado similar.
+</p>
+<p>Muchas etiquetas son fácil de diferencias como los headings o las imágenes y otras diferentes como header, footer,
+section o div, aquí es donde la semántica será la respuesta y si sabemos un poco de inglés también podremos darnos una
+pequeña idea de su uso pero en este curso vamos a usar las más importantes y que serán parte de tu día a día como
+Software Developer.
+</p>
+<p>
+<h3>3. DOM </h3>
+</p>
+<p>El Document Object Model es una estructura de árbol que representará todos nuestros proyectos web como si un árbol
+genealógico fuera: padres, hijos, hermanos con niveles infinitos. cuando entendemos esta anidación podemos identificar
+dependencias, herencias en css y que tan complejo es nuestro proyecto.
+</p>
+<img src="imagen/dom.png" alt="Imagen2" title="Imagen2"
+
 </body>
 </html>
