--- a/Index.html
+++ b/Index.html
@@ -15,26 +15,43 @@ Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo H
 en el nivel 2 aprenderás de componentes y en 3 sobre layouts.
 </p>
 <h2>SETUP</h2>
+<nav>
+<ol>
+  <li><a href="#Googlec">Google Chrome</a></li>
+    <li><a href="#Vsc">VISUAL ESTUDIO</a></li>
+      <li><a href="#Figma">FIGMA</a></li>
+        <li><a href="#GTH">Github</a></li>
+</ol>
+<p>CONCEPTOS ESCENSIALES DEL DESARROLLO WEB</p>
+<ol>
+  <li><a href="#HTML">QUE ES HTML</a></li>
+    <li><a href="#ET">ETIQUETAS</a></li>
+      <li><a href="#DOM">DOM</a></li>
+        <li><a href="#SM">SEMANTICA</a></li>
+          <li><a href="#AT">ATRIBUTOS</a></li>
+            <li><a href="#CSS">CSS</a></li>
+</ol>
+</nav>
 <img src="imagen/Chrome.png" alt="Logo De Google Chrome" tittle="Logo de Google Chrome">
-<h3>Google Chrome</h3>
+<H3 id="Googlec">Google Chrome</h3>
 <p>
 Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.
 </p>
   <img src="imagen/Visual.png" alt="Logo De Visual" tittle="Logo de Visual Estudio">
-  <h3>Visual Estudio</h3>
+  <h3 id="Vsc">Visual Estudio</h3>
   <p>
     Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de
     extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en
     el que se desemvuelva.
   </p>
   <img src="imagen/Figma.png" alt="Logo De Figma" tittle="Logo de Figma">
-  <h3>Figma</h3>
+  <h3 id="Figma">Figma</h3>
   <p>
     Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su
     implementación por su fácil uso porque puede ser usado directamente desde el navegador.
   </p>
   <img src="imagen/Github.png" alt="Logo De Github" tittle="Logo de Github">
-  <h3>Github</h3>
+  <h3 id="GTH">Github</h3>
   <p>
     Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el
     mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de
@@ -45,11 +62,11 @@ Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte
 <p>
 <H2>Conceptos esenciales del Desarrollo Web </H2>
 </p>
-<h3>1. HTML</h3>
+<h3 id="HTML">1. HTML</h3>
 <p>Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el componente más básico de la web. Define el significado
 y la estructura del contenido.</p>
 <img src="imagen/html.png" alt="Imagen1" title="Imagen1"
-<p><h3>2. Etiquetas</h3>
+<p><h3 id="ET">2. Etiquetas</h3>
 </p>
 <p>Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica al contenido de nuestro website y cada una tiene
 características y usos diferentes aunque visualmente den un resultado similar.
@@ -60,13 +77,41 @@ pequeña idea de su uso pero en este curso vamos a usar las más importantes y q
 Software Developer.
 </p>
 <p>
-<h3>3. DOM </h3>
+<h3 id="DOM">3. DOM </h3>
 </p>
 <p>El Document Object Model es una estructura de árbol que representará todos nuestros proyectos web como si un árbol
 genealógico fuera: padres, hijos, hermanos con niveles infinitos. cuando entendemos esta anidación podemos identificar
 dependencias, herencias en css y que tan complejo es nuestro proyecto.
 </p>
-<img src="imagen/dom.png" alt="Imagen2" title="Imagen2"
+<p><img src="imagen/dom.png" alt="Imagen2" title="Imagen2"
+ </p>
+<p>
+<h3 id="SM">4. Semántica</h3>
+</p>
+<p>La semántica le brinda sentido a cada elemento existen en un sitio web, algunos elementos será meramente decorativos y
+no deben significar nada pero otros serán títulos y deberán estar en diferente jerarquías o alguna secciones serán más
+relevantes que otras, esto ayudará a los motores de búsqueda como Google o Duck Duck Go a diferenciar tu contenido,
+categorizar y será la herramientas más valiosa para estar en los primeros resultados de búsqueda SEO. También ayudará a
+la accesibilidad de tu sitio web, para que personas con habilidades diferentes puedan entender cada contenido.
+</p>
+<p>
+<h3 id="AT">5.Atributos</h3>
+</p>
+<p>
+  Los atributos le dan características extra a las etiquetas para complementar información y son pre programadas por el
+  navegador, algunos atributos funcionan en todas las etiquetas de la misma forma como ‘class’ pero otros atributos
+  funcionan en solo alguna etiquetas como src
+</p>
+<p>
+<h3 id="CSS">6. CSS</h3>
+</p>
+<p>
+  Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el lenguaje de estilos utilizado para describir
+  la presentación de documentos HTML
+</p>
+<p>
+<img src="imagen/CSS.png" alt="Imagen3" tittle="Imagen3"
+</p>
 
 </body>
 </html>
